Fix performance graph layout bug on small devices

--- a/gzWeb/Content/Styles/_app/footer.css
+++ b/gzWeb/Content/Styles/_app/footer.css
@@ -10,3 +10,9 @@ footer {
     line-height: 50px;
     color: #000;
 }
+
+@media (max-width: 767px) {
+    footer {
+        font-size: 11px;
+    }
+}
